environments/dev/aiops-app/ai-anomaly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-anomaly-service
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-anomaly-service
  template:
    metadata:
      labels:
        app: ai-anomaly-service
    spec:
      containers:
      - name: ai-anomaly-service
        image: ghcr.io/roshaan1103/ai-anomaly-service:32051bad9baf4e5efe1969df15a21a0526e20416
        ports:
        - containerPort: 8000
